added headers on contact page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -79,7 +79,7 @@ a:hover {
     font-size: 24px;
 }
 
-.email {
+.info {
     font-size: 28px;
     color: #F1948A;
     -webkit-text-stroke-width: .5px;
